--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -48,13 +48,13 @@ You may recall from your physics class that entropy is a measure of disorder, an
 
 你们可能从物理课回忆起熵是无序的度量，热力学第二定律表明孤立系统的熵永远不会减小。这是一种形象的物理定律，我们会终生铭记。这是[普遍适用的](https://supermemo.guru/wiki/Applicability)。
 
-There is a sister concept in information theory called \[Shannon entropy\]\([https://en.wikipedia.org/wiki/Entropy\_\(information\_theory](https://en.wikipedia.org/wiki/Entropy_%28information_theory)\)\). It can be understood as the average value of information transmitted by a source. For example, take a channel that is continually transmitting a string of identical letters into infinity \(e.g. a string of As: "AAAAAA..."\). It is entirely predictable and carries an entropy of zero. We do not learn from such a channel.
+There is a sister concept in information theory called [Shannon entropy](https://en.wikipedia.org/wiki/Entropy_%28information_theory). It can be understood as the average value of information transmitted by a source. For example, take a channel that is continually transmitting a string of identical letters into infinity (e.g. a string of As: "AAAAAA..."). It is entirely predictable and carries an entropy of zero. We do not learn from such a channel.
 
-信息论中有一个姊妹概念叫\[香农熵\]\([https://en.wikipedia.org/wiki/Entropy\_\(information\_theory\)\)。它可以理解为由一个来源发送的信息的平均值。例如，假设一个渠道连续不断地将一串相同的字母传送到无穷远处（例如，一串](https://en.wikipedia.org/wiki/Entropy_%28information_theory%29%29。它可以理解为由一个来源发送的信息的平均值。例如，假设一个渠道连续不断地将一串相同的字母传送到无穷远处（例如，一串) A :「AAA……」）中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
+信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_%28information_theory%29%29)。它可以理解为由一个来源发送的信息的平均值。例如，假设一个渠道连续不断地将一串相同的字母传送到无穷远处（例如，一串 A :「AAAAAA…」）中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
 
 [Claude Shannon](https://en.wikipedia.org/wiki/Claude_Shannon) proposed the concept of information entropy in 1948. Soon after, scientists were hypothesizing as to whether the entropy of an information channel may have a powerful impact on how the brain perceives the value of the channel. In 1957, [Meyer hypothesized](https://supermemo.guru/wiki/Music_and_entropy) that the entropy of music determines the perception of its beauty. He concluded that a higher entropy may result in subjective tension, which correlates with more meaningful musical moments.
 
-[Claude Shannon](https://en.wikipedia.org/wiki/Claude_Shannon) 在1948年提出了信息熵的概念。不久之后，科学家们开始假设信息渠道的熵是否会对大脑感知渠道价值的方式产生强大影响。1957年，[Meyer 假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
+[Claude Shannon](https://en.wikipedia.org/wiki/Claude_Shannon) 在 1948 年提出了信息熵的概念。不久之后，科学家们开始假设信息渠道的熵是否会对大脑感知渠道价值的方式产生强大影响。1957 年，[Meyer 假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
 
 Meyer's thinking was [later refined](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music) to better understand the perception of music and information in general. There is more to music than just information. This is visible through the phenomena of a song being entertaining and fun for many playbacks. But this is rarely the case with books.
 
