--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -823,9 +823,9 @@ Negative side effects of learning are tiny in comparison to benefits. If there i
 
 #### 学习和赌博
 
-There is a close connection between the reward systems involved in learning and in gambling. Gambling and learning new words both activate the [ventral striatum](https://en.wikipedia.org/wiki/Striatum) in a \[similar fashion\]\([http://www.cell.com/current-biology/fulltext/S0960-9822\(14\)01207-X](http://www.cell.com/current-biology/fulltext/S0960-9822%2814%2901207-X)\). This close connection with gambling may confuse the picture for learning. A gambler at a slot machine does not learn much. Addictive videogaming is better. It can be pretty educational. Many team game addicts achieve fluency in English having made no progress at school before. Addiction to sports news may also involve a degree of learning. I learned about [Cabinda](http://en.wikipedia.org/wiki/Republic_of_Cabinda) only during the Africa Cup of Nations \(football\). Addiction to Facebook updates is not different either. It is based on [variable reward](https://supermemo.guru/wiki/Variable_reward) in anticipation of specific gains, however, it can also involve a great degree of learning. That learning may involve gossip, celebrity news, fake news, or actual useful learning. Even political poll updates can cause an addiction. In the battle between Hillary Clinton and Donald Trump, the polls were balanced enough to produce the cliffhanger effect. Compulsive checks for new polls have all hallmarks of an addiction. This kind of addiction, however, can lead to a great deal of learning. It is up to the student to separate gambling from learning. Voracious learning is good. Learning derived from an addiction may be good too. However, gambling on its own brings little value to human existence.
+There is a close connection between the reward systems involved in learning and in gambling. Gambling and learning new words both activate the [ventral striatum](https://en.wikipedia.org/wiki/Striatum) in a [similar fashion](http://www.cell.com/current-biology/fulltext/S0960-9822%2814%2901207-X). This close connection with gambling may confuse the picture for learning. A gambler at a slot machine does not learn much. Addictive videogaming is better. It can be pretty educational. Many team game addicts achieve fluency in English having made no progress at school before. Addiction to sports news may also involve a degree of learning. I learned about [Cabinda](http://en.wikipedia.org/wiki/Republic_of_Cabinda) only during the Africa Cup of Nations \(football\). Addiction to Facebook updates is not different either. It is based on [variable reward](https://supermemo.guru/wiki/Variable_reward) in anticipation of specific gains, however, it can also involve a great degree of learning. That learning may involve gossip, celebrity news, fake news, or actual useful learning. Even political poll updates can cause an addiction. In the battle between Hillary Clinton and Donald Trump, the polls were balanced enough to produce the cliffhanger effect. Compulsive checks for new polls have all hallmarks of an addiction. This kind of addiction, however, can lead to a great deal of learning. It is up to the student to separate gambling from learning. Voracious learning is good. Learning derived from an addiction may be good too. However, gambling on its own brings little value to human existence.
 
-分别与学习和赌博有关的奖励机制之间有着密切的联系。赌博和学习新词都以\[类似的形式\]\([http://www.cell.com/current-biology/fulltext/S0960-9822\(14\)01207-X\)激活\[腹侧纹状体\]\(https://en.wikipedia.org/wiki/Striatum\)。这种与赌博的密切联系可能会混淆学习的图景。赌徒在老虎机前学不到什么东西。让人上瘾的电子游戏更好。可能很有教育意义。许多团队游戏成瘾者以前在学校没有取得任何进步，但都能说一口流利的英语。对体育新闻的上瘾也可能涉及到一定程度的学习。我是在非洲国家杯\(足球\)期间才了解\[卡宾达\]\(http://en.wikipedia.org/wiki/Republic\_of\_Cabinda\)的。对](http://www.cell.com/current-biology/fulltext/S0960-9822%2814%2901207-X%29激活[腹侧纹状体]%28https://en.wikipedia.org/wiki/Striatum%29。这种与赌博的密切联系可能会混淆学习的图景。赌徒在老虎机前学不到什么东西。让人上瘾的电子游戏更好。可能很有教育意义。许多团队游戏成瘾者以前在学校没有取得任何进步，但都能说一口流利的英语。对体育新闻的上瘾也可能涉及到一定程度的学习。我是在非洲国家杯%28足球%29期间才了解[卡宾达]%28http://en.wikipedia.org/wiki/Republic_of_Cabinda%29的。对) Facebook 更新的上瘾也没有什么不同。它是建立在预期特定收益的[可变奖励](https://supermemo.guru/wiki/Variable_reward)的基础上的，然而，它也可能很大程度涉及到的学习。这种学习可能包括八卦，名人新闻，假新闻，或实际有用的学习。即使是最新的政治民意调查也会让人上瘾。在希拉里·克林顿\(Hillary Clinton\)和唐纳德·特朗普\(Donald Trump\)之间的较量中，民调平衡得足以产生扣人心弦的效果。强制检查新的民意测验都有上瘾的特征。然而，这种上瘾会导致大量的学习。要靠学生把赌博和学习分开。贪婪的学习是好的。从上瘾中获得的学习也可能是好的。然而，赌博本身并不能给人类的生存带来什么价值。
+分别与学习和赌博有关的奖励机制之间有着密切的联系。赌博和学习新词都以[类似的形式](http://www.cell.com/current-biology/fulltext/S0960-9822%2814%2901207-X)激活[腹侧纹状体](https://en.wikipedia.org/wiki/Striatum)。这种与赌博的密切联系可能会混淆学习的图景。赌徒在老虎机前学不到什么东西。让人上瘾的电子游戏更好。可能很有教育意义。许多团队游戏成瘾者以前在学校没有取得任何进步，但都能说一口流利的英语。对体育新闻的上瘾也可能涉及到一定程度的学习。我是在非洲国家杯（足球）期间才了解[卡宾达](https://supermemo.guru/wiki/Variable_reward)。对 Facebook 更新的上瘾也没有什么不同。它是建立在预期特定收益的[可变奖励](https://supermemo.guru/wiki/Variable_reward)的基础上的，然而，它也可能很大程度涉及到的学习。这种学习可能包括八卦，名人新闻，假新闻，或实际有用的学习。即使是最新的政治民意调查也会让人上瘾。在 Hillary Clinton 和 Donald Trump 之间的较量中，民调平衡得足以产生扣人心弦的效果。强制检查新的民意测验都有上瘾的特征。然而，这种上瘾会导致大量的学习。要靠学生把赌博和学习分开。贪婪的学习是好的。从上瘾中获得的学习也可能是好的。然而，赌博本身并不能给人类的生存带来什么价值。
 
 #### 6.19.3 Learning and sleep
 
@@ -937,7 +937,7 @@ Once depression hits, the affected individual faces a double whammy. Not only ar
 
 Can learning disrupt this cycle? It can be extremely hard! Respect for [circadian cycle](https://supermemo.guru/wiki/Natural_creativity_cycle) is the first step towards recovering the derailed brain. In the circadian cycle, peak creativity window needs to be captured to attempt remedial learning. Learning needs to be prolific, intense, effective, and pleasurable. [Incremental reading](https://supermemo.guru/wiki/Incremental_reading) would be fantastic if it was not that difficult. For a depressed individual with no skills in the department, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) is no remedy. It is too late. Trying to master incremental reading in a bad state of mind could only make matters worse. It could result in a hate of incremental reading.
 
-学习能打破这个循环吗？这可能是非常困难的！尊重[生理周期](https://supermemo.guru/wiki/Natural_creativity_cycle)是恢复脱轨大脑的第一步。在昼夜周期中，需要抓住创造力高峰窗口来尝试补救性学习。学习需要多产、强烈、有效和愉快。[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)如果不是那么困难的话，那就太棒了。对于一个在部门里没有技能的抑郁的人来说，[SuperMem](https://supermemo.guru/wiki/SuperMemo)o 是不能补救的。太晚了。试图在糟糕的心态下掌握渐进阅读只会让事情变得更糟。这可能会导致对渐进阅读的厌恶。
+学习能打破这个循环吗？这可能是非常困难的！尊重[生理周期](https://supermemo.guru/wiki/Natural_creativity_cycle)是恢复脱轨大脑的第一步。在昼夜周期中，需要抓住创造力高峰窗口来尝试补救性学习。学习需要多产、强烈、有效和愉快。[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)如果不是那么困难的话，那就太棒了。对于一个在部门里没有技能的抑郁的人来说，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 是不能补救的。太晚了。试图在糟糕的心态下掌握渐进阅读只会让事情变得更糟。这可能会导致对渐进阅读的厌恶。
 
 If learning is possible, it can act as a refuge, which might help suppress negative memories and build new connections. As of that point, the process of building new tendrils of knowledge may begin. This process that should take the mind towards a more optimistic interpretation of the world is slow and laborious. In most severe cases, it may take months or years of hard work and the outcome is not guaranteed.
 
