--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -364,9 +364,9 @@ Where I speak of golden nuggets of knowledge, Peter Thiel speaks of the [power l
 >
 > 我有我自己鲜明的例子来说明评估网络在对抗教育系统方面的力量：
 >
-> In 1985, I computed the approximate function of optimum intervals for knowledge review needed for developing long-term memories. This was the birth to [SuperMemo](https://supermemo.guru/wiki/SuperMemo). Originally, the function was applicable using a [pen and paper](http://www.super-memory.com/articles/paper.htm). Within a few months, I realized the system was extremely powerful. I knew I could double its power with the use of a computer. However, I did not know anyone who could write learning software based on my math. In those days, the entire population of programmers in Poland was made of old timers doing Fortran or Cobol on mainframes, or a growing mass of amateur enthusiasts working with microcomputers such as ZX 81, Commodore 64, or ZX Spectrum. I decided to write the program myself. I had no programming skills though. I was a student of computer science and I asked my teachers for help. However, our only course of programming was the assembly language of Datapoint. Those skills were great for playing with registers and coming up with 11_11=121. I wanted to learn something more useful for programming SuperMemo. My school kept demanding that I learn to compute the resistance of an electronic circuit, or learn symbolic integration. My knowledge valuation network produced a simple output: programming skills -&gt; SuperMemo -&gt; faster learning \(in all fields, incl. electronics or calculus\). I was determined to learn programming. My school was determined to stop me \(by loading other compulsory courses\). In desperation, I enrolled in University of Economics, which had a course of algorithmic languages. The course focused on \[Pascal\]\(_[https://en.wikipedia.org/wiki/Pascal\_\(programming\_language](https://en.wikipedia.org/wiki/Pascal_%28programming_language)_\)\). I had to do my normal load of classes and do my Pascal in extra time. That course was nice, but we did all learning in theory. On paper. There were very few PCs at Polish universities in those days \(1986\) and most practical applications run on mainframes called \[Odra\]\(_[https://en.wikipedia.org/wiki/Odra\_\(computer](https://en.wikipedia.org/wiki/Odra_%28computer)_\)\) \(produced for Soviet block in Poland as of 1960\). When I finally got my first computer:_ [_ZX Spectrum_](https://en.wikipedia.org/wiki/ZX_Spectrum) _\(Jan 4, 1986\), I could finally start learning programming languages. Before the computer arrived, I started writing my first program! On paper. It was a program for organizing my day \(sort of \[\*Plan_\]\([http://help.supermemo.org/wiki/Plan](http://help.supermemo.org/wiki/Plan)\) in SuperMemo\). Not much later, I was able to learn Pascal too. First I had to reduce the bad impact of school and cut the load of classes. I struck a deal with my teacher of electronic circuits. I would do some high-pass filter calculations for him, and this would be a chance to improve my Pascal skills. The program took many hours to write and was a monumental waste of time. It was a perfect example of bad learning. I hardly understood how my own program worked. However, it was still better than just learning diagrams. For programming, the learning was good and I improved my skills a lot.
+> In 1985, I computed the approximate function of optimum intervals for knowledge review needed for developing long-term memories. This was the birth to [SuperMemo](https://supermemo.guru/wiki/SuperMemo). Originally, the function was applicable using a [pen and paper](http://www.super-memory.com/articles/paper.htm). Within a few months, I realized the system was extremely powerful. I knew I could double its power with the use of a computer. However, I did not know anyone who could write learning software based on my math. In those days, the entire population of programmers in Poland was made of old timers doing Fortran or Cobol on mainframes, or a growing mass of amateur enthusiasts working with microcomputers such as ZX 81, Commodore 64, or ZX Spectrum. I decided to write the program myself. I had no programming skills though. I was a student of computer science and I asked my teachers for help. However, our only course of programming was the assembly language of Datapoint. Those skills were great for playing with registers and coming up with 11_11=121. I wanted to learn something more useful for programming SuperMemo. My school kept demanding that I learn to compute the resistance of an electronic circuit, or learn symbolic integration. My knowledge valuation network produced a simple output: programming skills -&gt; SuperMemo -&gt; faster learning \(in all fields, incl. electronics or calculus\). I was determined to learn programming. My school was determined to stop me \(by loading other compulsory courses\). In desperation, I enrolled in University of Economics, which had a course of algorithmic languages. The course focused on [Pascal](https://en.wikipedia.org/wiki/Pascal_%28programming_language). I had to do my normal load of classes and do my Pascal in extra time. That course was nice, but we did all learning in theory. On paper. There were very few PCs at Polish universities in those days \(1986\) and most practical applications run on mainframes called [Odra](https://en.wikipedia.org/wiki/Odra_%28computer) (produced for Soviet block in Poland as of 1960\). When I finally got my first computer: [_ZX Spectrum_](https://en.wikipedia.org/wiki/ZX_Spectrum) \(Jan 4, 1986\), I could finally start learning programming languages. Before the computer arrived, I started writing my first program! On paper. It was a program for organizing my day \(sort of [_Plan_](http://help.supermemo.org/wiki/Plan](http://help.supermemo.org/wiki/Plan) in SuperMemo\). Not much later, I was able to learn Pascal too. First I had to reduce the bad impact of school and cut the load of classes. I struck a deal with my teacher of electronic circuits. I would do some high-pass filter calculations for him, and this would be a chance to improve my Pascal skills. The program took many hours to write and was a monumental waste of time. It was a perfect example of bad learning. I hardly understood how my own program worked. However, it was still better than just learning diagrams. For programming, the learning was good and I improved my skills a lot.
 >
-> 1985 年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用 ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 \* 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出：编程技能——&gt; SuperMemo ——&gt;更快的学习（在所有领域，包括电子或微积分）。我决心学习编程。我的学校决心阻止我\(通过要求选修其他必修课程\)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 \[Pascal\]\([https://en.wikipedia.org/wiki/Pascal\_\(programming\_language\)\)。我不得不在做平时的功课的同时，在额外的时间里学习](https://en.wikipedia.org/wiki/Pascal_%28programming_language%29%29。我不得不在做平时的功课的同时，在额外的时间里学习) Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时（1986 年）波兰大学里的个人电脑很少，大多数实用的应用都在名为 \[Odra\]\([https://en.wikipedia.org/wiki/Odra\_\(computer](https://en.wikipedia.org/wiki/Odra_%28computer)\)\) 的大型机上运行（从 1960 年开始，为在波兰的苏联集团生产）。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum)（1986 年 1 月 4 日），我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划（类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划）。不久之后，我也学会了 Pascal。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal 技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
+> 1985 年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用 ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 \* 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出：编程技能——&gt; SuperMemo ——&gt;更快的学习（在所有领域，包括电子或微积分）。我决心学习编程。我的学校决心阻止我\(通过要求选修其他必修课程\)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_%28programming_language%29%29)。我不得不在做平时的功课的同时，在额外的时间里学习) Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时（1986 年）波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_%28computer) 的大型机上运行（从 1960 年开始，为在波兰的苏联集团生产）。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum)（1986 年 1 月 4 日），我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划（类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划）。不久之后，我也学会了 Pascal。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal 技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
 >
 > It is hard to express it in words to those who do not know programming, but the difference of knowledge valuations between university courses and doing one's own programming is comparable to the size difference between the plum and the Jupiter. While my colleagues suffered through boring lectures in electronics and metrology, I could make my start. I would learn nothing at school. I would learn a bit in my extracurricular course of Pascal. However, only the practical knowledge backed up by passion and clear goals mattered. By December 1987, my effort culminated in writing the first version of SuperMemo, which totally changed the course of my life. Open mind of my supervisor Dr Zbigniew Kierzowski let me devote my whole Master's Thesis to the subject of SuperMemo. Happy 80th birthday Professor Kierzkowski! It was pretty unusual for a student to make his own determination on that scale, and then compound it with the fact that the thesis was written in English. This fact is not unusual today, but it involved a big administrative and tactical battle back in 1989.
 >
@@ -428,11 +428,11 @@ The degree of reward obtained from individual messages in the learning stream wi
 
 从学习流中的各个信息获得的奖励程度将决定信息学习熵的水平。关于无聊话题的讲座的学习熵很低。在网上寻找解决某个特定问题所需的信息会带来很高的学习熵。
 
-Unlike \[Shannon entropy\]\([https://en.wikipedia.org/wiki/Entropy\_\(information\_theory](https://en.wikipedia.org/wiki/Entropy_%28information_theory)\)\) that is based on averages, learntropy will be more of a trailing average where recent messages will carry a higher weight than messages delivered earlier in time. In addition, learntropy is rooted in rules that govern the [consolidation of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), incl. the [spacing effect](https://supermemo.guru/wiki/Spacing_effect).
+Unlike [Shannon entropy](https://en.wikipedia.org/wiki/Entropy_%28information_theory) that is based on averages, learntropy will be more of a trailing average where recent messages will carry a higher weight than messages delivered earlier in time. In addition, learntropy is rooted in rules that govern the [consolidation of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), incl. the [spacing effect](https://supermemo.guru/wiki/Spacing_effect).
 
-与基于平均值的\[香农熵\]\([https://en.wikipedia.org/wiki/Entropy\_\(information\_theory\)\)不同，学习熵更像是一个趋势平均数，最新的信息将比之前传授的信息具有更高的权重。此外，学习熵植根于支配\[记忆巩固\]\(https://supermemo.guru/wiki/Two\_component\_model\_of\_memory\)的规律，包括\[间隔效应\]\(https://supermemo.guru/wiki/Spacing\_effect\)。](https://en.wikipedia.org/wiki/Entropy_%28information_theory%29%29不同，学习熵更像是一个趋势平均数，最新的信息将比之前传授的信息具有更高的权重。此外，学习熵植根于支配[记忆巩固]%28https://supermemo.guru/wiki/Two_component_model_of_memory%29的规律，包括[间隔效应]%28https://supermemo.guru/wiki/Spacing_effect%29。)
+与基于平均值的[香农熵](https://en.wikipedia.org/wiki/Entropy_%28information_theory%29%29)不同，学习熵更像是一个趋势平均数，最新的信息将比之前传授的信息具有更高的权重。此外，学习熵植根于支配[记忆巩固](https://supermemo.guru/wiki/Two_component_model_of_memory)的规律，包括[间隔效应](https://supermemo.guru/wiki/Spacing_effect)。
 
-The learntropy of a boring lecture will shoot up once a golden nugget of knowledge fills an important gap in understanding. The increase in learntropy will be proportional to the expression of the [stability](https://supermemo.guru/wiki/Stability) of the memory trace determining knowledge valuation \(incl. descending traces in the [knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network)\). The impact of a golden nugget will wane in time. The cumulative effect of those happy discoveries will determine the level of learntropy at any given time \(e.g. during a lecture\).
+The learntropy of a boring lecture will shoot up once a golden nugget of  fills an important gap in understanding. The increase in learntropy will be proportional to the expression of the [stability](https://supermemo.guru/wiki/Stability) of the memory trace determining knowledge valuation \(incl. descending traces in the [knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network)\). The impact of a golden nugget will wane in time. The cumulative effect of those happy discoveries will determine the level of learntropy at any given time \(e.g. during a lecture\).
 
 一旦高价值知识填补了理解上的一个重要空白，枯燥的演讲的学习熵就会激增。学习熵的增加与决定知识估值的记忆[稳定性](https://supermemo.guru/wiki/Stability)曲线的表达式成正比（包括[知识估值网络](https://supermemo.guru/wiki/Knowledge_valuation_network)中的下降曲线）。随着时间的推移，高价值知识的影响将逐渐减弱。这些令人愉快的发现的累积效应将决定在任何特定时段（例如在演讲期间）的学习熵的水平。
 
