--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md
@@ -30,7 +30,7 @@ Some scientists believe that we innately lose our novelty seeking and our [learn
 
 **The main factor that undermines the learn drive with age is the established knowledge**. There are also secondary factors such as \(1\) declining "attractive power" of the current knowledge and \(2\) the actual aging of the brain. Aging may result in a decline in neural networks, synaptic pruning, lesser mental energy, etc. Those can be largely prevented with mental hygiene and learning itself. It is possible to retain the [learn drive](https://supermemo.guru/wiki/Learn_drive) and passion for learning till the age of hundred. With healthy lifestyle, it is easier to retain vitality of the brain than it is to retain, for example, the vitality of the motor system.
 
-**随着年龄的增长，削弱学习内驱力的主要因素是已掌握的知识。**还有一些次要因素，如（1）当前知识的「吸引力」下降，（2）大脑的实际老化。老化可能会导致神经网络的老化、突触削减、精神活力的减少等。这些都可以通过精神保健和学习本身来预防。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和热情可以一直保持到百岁。在健康的生活方式中，保持大脑的活力比保持运动系统的活力更容易。
+**随着年龄的增长，削弱学习内驱力的主要因素是已掌握的知识**。还有一些次要因素，如（1）当前知识的「吸引力」下降，（2）大脑的实际老化。老化可能会导致神经网络的老化、突触削减、精神活力的减少等。这些都可以通过精神保健和学习本身来预防。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和热情可以一直保持到百岁。在健康的生活方式中，保持大脑的活力比保持运动系统的活力更容易。
 
 Some of novelty seeking may be part of a developmental program \(e.g. baby's taste-seeking stage\). However, those programs would not play an essential part of explorations we tend to induce in the young generation in the course of their education.
 
